added logo and edited css a bit

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div
-      class="p-1 flex flex-col justify-center w-full bg-gradient-to-br from-red-300 to-white"
+      class="p-1 flex flex-col justify-center w-[300px] bg-gradient-to-br from-red-300 to-white"
     >
       <div id="button_div" class="flex flex-col justify-center align-middle">
         <button
@@ -23,7 +23,7 @@
         </button>
       </div>
       <h1 class="font-bold">All your youtube time stamps will come here!!</h1>
-      <ul id="timestamps"></ul>
+      <ul id="timestamps" class="px-5 mt-10"></ul>
     </div>
     <script src="js/popup.js"></script>
   </body>
